@@ -44,8 +44,9 @@ FPoint& FPoint::operator = (const FPoint& p)
 //----------------------------------------------------------------------
 FPoint& FPoint::operator = (FPoint&& p)
 {
-  xpos = std::move(p.xpos);
-  ypos = std::move(p.ypos);
+  xpos = p.xpos;
+  ypos = p.ypos;
+  p.xpos = p.ypos = 0;
   return *this;
 }
 
