@@ -55,6 +55,7 @@ class FSize
     // Constructors
     FSize () = default;
     FSize (const FSize&);  // copy constructor
+    FSize (FSize&&);       // move constructor
     FSize (std::size_t, std::size_t);
 
     // Destructor
@@ -108,7 +109,13 @@ class FSize
 inline FSize::FSize (const FSize& s)  // copy constructor
   : width(s.width)
   , height(s.height)
-{ }
+{ std::cerr << " copy ctor\n";}
+
+//----------------------------------------------------------------------
+inline FSize::FSize (FSize&& s)  // move constructor
+  : width(s.width)
+  , height(s.height)
+{ s.width = s.height = 0; std::cerr << " move ctor\n";}
 
 //----------------------------------------------------------------------
 inline FSize::FSize (std::size_t w, std::size_t h)
