@@ -1,3 +1,7 @@
+2019-07-31  Markus Gans  <guru.mail@muenster.de>
+	* Unit test for the move assignment operator and move constructor 
+	  in FPoint, FSize and FRect
+
 2019-07-28  Markus Gans  <guru.mail@muenster.de>
 	* FreeBSD can now change the frequency and duration 
 	  of the pc speaker signal
